# resourceideaapi

./: .env.dev  .env.local  .env.local.example  .env.sample  .flake8  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  conftest.py  docker-compose-dev.yml  docker-compose-prod.yml  manage.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.dev.txt  requirements.txt
.circleci/: config.yaml  config.yml
.ebextensions/: django.config
.github/workflows/: ci.yml
client/: admin.py  models.py  tests.py  utils.py
client/api/: serializers.py  urls.py  views.py
client/management/: createsu.py
client/migrations/: 0001_initial.py  0002_client_src_client_id.py  0003_auto_20200604_2046.py
client/tests/: factory.py  (+1 more)
client_industry/: admin.py  apps.py  models.py
common/: base_test_case.py  enums.py  models.py  permission_lists.py  permissions.py  urls.py  utils.py  views.py
config_scripts/: ci-deploy.sh
department/: admin.py  models.py
employee/: admin.py  models.py  permissions.py  tests.py  utils.py
engagement/: admin.py  apps.py  models.py  permissions.py  tests.py
home/: views.py
job/: admin.py  models.py
job_position/: admin.py  apps.py  models.py
k8s/: deployment.yml  namespace.yml  notes.md  role-binding.yml  role.yml  service-account.yml  service.yml
lineofservice/: admin.py  apps.py  models.py
nginx/: nginx.default  notes.txt  start-server.sh
organization/: admin.py  models.py  tests.py  utils.py
resourceideaapi/: settings.py  urls.py  wsgi.py
task/: models.py
task_assignment/: admin.py  apps.py  models.py  utils.py
(+123 files in other folders)
