[tool.poetry]
name = "resourceideaapi"
version = "0.1.0"
description = ""
authors = ["Joseph Serunjogi <joeseggie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^2.2"
docker = "^4.2.0"
psycopg2-binary = "^2.7"
flake8 = "^3.7.9"
djangorestframework = "^3.11.0"
djangorestframework-jwt = "^1.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
mypy = "^0.770"
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
